--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 </div>
             </div>
         </nav>
-        <div class="container-fluid" >
+        <div class="container-fluid">
             <div class="row" id="hero">
                 <div class="col-md-8">
                     <div>
@@ -62,7 +62,8 @@
                     <div>
                         <form action="#">
                             <h3>Register today</h3>
-                            <p>Free for All Beings</p>
+                            <p>Free for All Beings
+                            </p>
                             <label for="Name">Name</label>
                             <br>
                             <input type="text" name="" id="">
@@ -74,7 +75,7 @@
                             <label for="country">Country</label>
                             <br>
                             <select name="" id="">
-                                <option value="1">Pakistan</option>
+                                <option value="1" selected></option>
                                 <option value="2">Dubai</option>
                                 <option value="3">Uk</option>
                                 <option value="4">USA</option>
@@ -87,7 +88,193 @@
         </div>
 
     </section>
+    <section id="collective">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <h2>Healing and Awakening in the
+                        Highest Vibration of Collective Consciousness</h2>
+                    <p>Merge with the collective consciousness of history’s great spiritual masters, join your healing
+                        energy with the light of more than 100,000 souls from all corners of the world to create a
+                        powerful healing vortex of unconditional love. When all these energies combine, the whole world
+                        benefits. Enlighten the hearts of many and Transform the energies to Love.</p>
+                    <img src="./assets/img/2 sec.png" class="img-fluid" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="Energized">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <div>
+                        <h3>Start the New Year Energized
+                            and Full of Potential!</h3>
+                        <p>What you do for the world, for your business, for your
+                            relationships, and for yourself matters!</p>
+                        <p>When we all come together with love in our hearts and share our loving energy with each
+                            other, the outcome is something out of this world – something so powerful that it will leave
+                            you feeling happy, loved, protected, healed, and truly at peace with yourself and the world
+                            around you. Welcome the new year surrounded and supported by the energies that will help you
+                            achieve your heart's desires.
+                        </p>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div>
+                        <img src="./assets/img/3 sec.png" class="img-fluid" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="Broadcast">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <div>
+                        <h2>Broadcast Live Daily</h2>
+                        <h4>January 3 - 9, 2021 | Twice A Day for 7 Days</h4>
+                        <p>Take 30 minutes each day for chanting and blessing – for yourself, your loved ones, the new
+                            year, and the world! Join the session that works best for your time zone or join both
+                            sessions each day. Let's meditate together with the sound of Tibetan Monks chanting for a
+                            world without suffering!</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="Masters">
+        <div class="container">
+            <div class="row">
+                <div>
+                    <h3>Masters In Blessing
+                        150 Years OF Chanting and Meditating Combined</h3>
+                    <p>Between Master Chunyi Lin and the three Tibetan Monks, they have total of over 150+ years of
+                        chanting practice.</p>
 
+                </div>
+                <div class="col-md-3">
+                    <div>
+                        <img src="./assets/img/master.png" class="img-fluid" alt="">
+                        <h5>Name</h5>
+                        <p>Chanting for 50 Years</p>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div>
+                        <img src="./assets/img/master.png" class="img-fluid" alt="">
+
+                        <h5>Name</h5>
+                        <p>Chanting for 50 Years</p>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div>
+                        <img src="./assets/img/master.png" class="img-fluid" alt="">
+
+                        <h5>Name</h5>
+                        <p>Chanting for 50 Years</p>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div>
+                        <img src="./assets/img/master.png" class="img-fluid" alt="">
+
+                        <h5>Name</h5>
+                        <p>Chanting for 50 Years</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="universal">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <div>
+                        <h6>We Have One</h6>
+                        <h2>Universal Goal</h2>
+                        <p>To turn around the rising tide of disconnection in the world and, through renewed peace and
+                            love, reconnect to what truly matters to us.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="setting">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <div>
+                        <img src="./assets/img/setting.png" class="img-fluid" alt="">
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div>
+                        <h3>Setting Your
+                            Intention for the New Year</h3>
+                        <p>Using ancient Chanting to Experience
+                            the Power of Your Intention</p>
+                        <p class="font16">Spring Forest Qigong Master Chunyi Lin has always said that the sound of
+                            ancient chants can
+                            lift one's spirit towards the higher self. These chanting and sound elements of the Tibetan
+                            language are penetrating and liberating. In the recitation of Tibetan ancient chants, the
+                            sound is very important, for it can bring transformation in you while leading you to power
+                            and strength.
+
+                            The sacred chanting of Tibetan chants combined with Master Chunyi Lin's guided meditation
+                            provides us with the power to attain our goals of a safe, healthy, prosperous 2021, and lift
+                            ourselves from ordinary to higher levels of consciousness. They give us the power to help
+                            heal diseases; clear karmas; enlightening our hearts and transform our lives.</p>
+                        <button class="btn ">Sign Up</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="Radiators">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <div>
+                        <h5>How Do We Bless the World?
+                        </h5>
+                        <h3>The time is now</h3>
+                        <h5>A World of Love Radiators Start with YOU</h5>
+                        <p>By taking the initiative to be a LOVE RADIATOR, one person at a time. Join Master Chunyi Lin
+                            and more than 20,000 people from around the world, as we come together online starting
+                            January 3, 2021.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="Days">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="chants">
+                        <h3>7 DAYS | 7 CHANTS | 7 O'CLOCK</h3>
+                        <h5>Join one that work best for your time zone, or join both sessions each day.</h5>
+                        <p>Each of the ancient chant carries thousands of years of high collective consciousness as it
+                            was chanted for thousands of years by teachers and masters of the past. We have chosen these
+                            chants because they are meant to bless every areas of our lives. Health, prosperity, love,
+                            relationships, business, career, long longevity, and enlightenment. Listening to the live
+                            chants by three Tibetan monks and follow Master Chunyi Lin's guided meditation each day for
+                            7 days to bless you, your loved ones, and the world.
+                        </p>
+                    </div>
+                </div>
+                <div class="col-md-12">
+                    <div class="d-flex justify-content-between clock">
+                        <h4>Day 1</h4>
+                        <p>Sunday, Jan. 3 | 7AM & 7PM (US CENTRAL TIME) <br><span>A Prayer for All Living Beings</span></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
